# risk-dice-tools

./: .gitignore  .prettierrc  Makefile  README.md  compile.sh  index.html  index.js  package.json  riskdice.c  riskdice.h  tailwind.config.ts
site/: index.html  index.js  style.css
src/: app.html  app.postcss  riskdice.d.ts
src/lib/: colors.ts  formatting.ts  riskdice.ts
src/routes/: +layout.svelte  +page.svelte  BattleCalc.svelte  BattleChart.svelte  TroopsNeededCalc.svelte
wasm/: CMakeLists.txt  append.d.ts  common.h  copy_to_lib.sh  prepend.d.ts  prepend.js  riskdice.c  riskdice.h
